[tool.poetry]
name = "csv-to-cospend"
version = "0.1.0"
description = ""
authors = ["Fabian Siegel <fabians1999@gmail.com>"]
readme = "README.md"
packages = [{include = "csv_to_cospend"}]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
requests = "^2.28.2"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
jedi-language-server = "^0.41.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
