[project]
name = "csv-to-cospend"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Fabian Siegel", email = "fabians1999@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.28.2",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "jedi-language-server>=0.45.1",
    "black>=23.12.1",
]
